--- a/metadata/manifest.yml
+++ b/metadata/manifest.yml
@@ -18,10 +18,10 @@ Scaling:
   Min: 1
   Max: -1
 Cart-Data:
-  - Key: OPENSHIFT_NGINX_PORT
+  - Key: OPENSHIFT_RINX_PORT
     Type: environment
     Description: "Internal port to which the web-framework binds to."
-  - Key: OPENSHIFT_NGINX_IP
+  - Key: OPENSHIFT_RINX_IP
     Type: environment
     Description: "Internal IP to which the web-framework binds to."
 Publishes:
